# ord-plan

./: .dockerignore  .flake8  .gitignore  .gitlint  .gitlint2  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  conftest.py  noxfile.py  opencode.json  pyproject.toml  tasks.py
.github/workflows/: ci.yml  constraints.txt  labeler.yml  release.yml  tests.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
cz_custom_minimal/: __init__.py  pyproject.toml
cz_custom_minimal/cz_custom_minimal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: conf.py  contributing.md  index.md  requirements.txt  usage.md
git-hooks/: commit-msg  post-commit  pre-commit  prepare-commit-msg
ord-plan/: .cookiecutter.json  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
ord-plan/docs/: index.md  reference.md  usage.md
ord-plan/src/ord_plan/: __main__.py
ord-plan/src/ord_plan/models/: __init__.py  date_range.py  event_rule.py  org_event.py
ord-plan/src/ord_plan/parsers/: __init__.py  org_mode.py
ord-plan/src/ord_plan/services/: __init__.py  cron_service.py  event_service.py  file_service.py
ord-plan/src/ord_plan/utils/: validators.py
ord-plan/tests/: test_main.py
ord-plan/tests/contract/: test_generate_command.py
ord-plan/tests/fixtures/: existing_content.org  same_date_existing.org  test_rules_basic.yaml  test_rules_file_preservation.yaml  test_rules_same_date.yaml  test_rules_stdout.yaml
ord-plan/tests/unit/: test_date_protection_unit.py  test_validators.py
scripts/restructure/: __init__.py  fix_test_imports.py  move_directories.py  update_imports.py  update_paths.py  validate_moves.py  validate_references.py  validate_repository.py  validate_state.py
specs/001-generate-org/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-generate-org/checklists/: requirements.md
specs/001-generate-org/contracts/: cli.md  yaml-schema.md
specs/002-restructure-org/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-restructure-org/checklists/: requirements.md
specs/002-restructure-org/contracts/: cli.md
specs/003-add-test-cases/: spec.md
specs/003-add-test-cases/checklists/: requirements.md
specs/004-add-format-flag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-add-format-flag/checklists/: requirements.md
specs/004-add-format-flag/contracts/: cli.md
specs/005-migrate-poetry-to-uv/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-migrate-poetry-to-uv/contracts/: cli.md
src/ord_plan/: __init__.py  __main__.py
src/ord_plan/cli/: __init__.py  analyze.py  config.py  generate.py  test_cron.py
src/ord_plan/models/: date_range.py  event_rule.py  org_date_node.py  org_event.py
src/ord_plan/parsers/: org_mode.py  yaml_parser.py
src/ord_plan/serializers/: dataframe.py
src/ord_plan/services/: analytics_service.py  cron_service.py  date_service.py  event_service.py  file_service.py
src/ord_plan/utils/: __init__.py  validators.py
tests/: __init__.py  fixtures.py  test_main.py
tests/contract/: test_generate_command.py
tests/fixtures/: existing_content.org  minimal_events.yaml  same_date_existing.org  sample_events.yaml  sample_output.org  test_cron_boundary.yaml  test_events.yaml  test_fiscal_body.yaml  test_format_empty.yaml  test_format_override.yaml  test_format_partial.yaml  test_format_valid.yaml  test_headers_missing_date_format.yaml  test_headers_missing_use_week_tree.yaml  test_headers_missing_year_format.yaml  test_headers_valid.yaml  test_properties.yaml  test_rules_basic.yaml  test_rules_conflicting.yaml  test_rules_events_only.yaml  test_rules_file_preservation.yaml  test_rules_long_content.yaml  test_rules_nested.yaml  test_rules_same_date.yaml  test_rules_stdout.yaml
tests/integration/: test_backward_compat.py  test_date_protection.py  test_date_ranges.py  test_edge_cases.py  test_error_handling.py  test_file_preservation.py  test_format_flag.py  test_format_override.py  test_performance.py  test_properties.py  test_rule_filtering.py
tests/unit/: test_date_protection_unit.py  test_date_service.py  test_file_service.py  test_validators.py
tests/unit/test_cli/: test_config.py  test_test_cron.py
tests/unit/test_parsers/: __init__.py  test_yaml_parser.py
