[project]
name = "ord-plan"
version = "0.0.1"
description = "ORD Plan"
authors = [{ name = "vonpupp", email = "vonpupp@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "GPL-3.0"
classifiers = ["Development Status :: 3 - Alpha"]
dependencies = [
    "click>=8.0.1,<8.3",
    "orgparse>=0.1.0",
    "python-dateutil>=2.8.0",
    "croniter@git+https://github.com/pallets-eco/croniter.git",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/vonpupp/ord-plan"
Repository = "https://github.com/vonpupp/ord-plan"
Documentation = "https://ord-plan.readthedocs.io"
Changelog = "https://github.com/vonpupp/releases"

[project.scripts]
ord-plan = "ord_plan.__main__:main"

[dependency-groups]
dev = [
    "Pygments>=2.10.0",
    "furo>=2021.11.12",
    "mypy>=0.930",
    "pre-commit>=2.16.0",
    "psutil>=5.9.0",
    "safety>=1.10.3",
    "sphinx>=5.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
    "xdoctest[colors]>=0.15.10",
    "myst-parser>=0.16.1",
    "tomli-w>=1.0.0",
    "ruff>=0.8.0",
    "pyrefly>=0.3.1",
    "deadcode>=2.3.0",
    "bandit[toml]>=1.8.0",
]
test = [
    "coverage[toml]>=6.2,<7.0",
    "pytest>=6.2.5",
    "pytest-cov>=4.0.0",
    "types-python-dateutil>=2.8.0",
    "types-PyYAML>=6.0.0",
    "types-croniter>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["ord_plan", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pytz.*:",
    "ignore::DeprecationWarning:_pytest.*:",
]

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
strict = true
warn_unreachable = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.bandit]
exclude_dirs = ["/tests", "/scripts/restructure"]
skips = ["B101"]
